- added context for user, product, search - added pages: not found, catalog, product - added router for mentioned pages - added simple bread crumbs

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@ html {
     box-sizing: border-box;
 }
 body {
-    font-family: "Nunito", "Arial", "Helvetica", sans-serif;
+    font-family: "Nunito", sans-serif;
 }
 
 .container {
